<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/bmi_text"
            android:padding="10dp"
            android:textSize="30sp"
            android:text="@string/bmi_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bmi"
            android:padding="10dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/cause_text"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/cause_text"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/causes"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/symptoms_text"
            android:text="@string/symptoms_text"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/symptoms"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cure_text"
            android:text="@string/cure_text"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cure"
            android:padding="10dp"/>

    </LinearLayout>
</ScrollView>