<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anurag.knowyourdisease.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Welcome! Enter your details"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="44dp" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="textPersonName"
        android:layout_below="@+id/editText3"
        android:id="@+id/editText4"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:prompt="@string/disease_prompt"
        android:entries="@array/diesase_array"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>



</RelativeLayout>
